Sync PAPI placeholders with LP contexts Also config shenanigans